crates/ruff_python_parser/src/snapshots/ruff_python_parser__function__tests__function_kw_only_args.snap
---
source: crates/ruff_python_parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..23,
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                args: Arguments {
                    range: 5..17,
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [
                        ArgWithDefault {
                            range: 9..10,
                            def: Arg {
                                range: 9..10,
                                arg: Identifier {
                                    id: "a",
                                    range: 9..10,
                                },
                                annotation: None,
                                type_comment: None,
                            },
                            default: None,
                        },
                        ArgWithDefault {
                            range: 12..13,
                            def: Arg {
                                range: 12..13,
                                arg: Identifier {
                                    id: "b",
                                    range: 12..13,
                                },
                                annotation: None,
                                type_comment: None,
                            },
                            default: None,
                        },
                        ArgWithDefault {
                            range: 15..16,
                            def: Arg {
                                range: 15..16,
                                arg: Identifier {
                                    id: "c",
                                    range: 15..16,
                                },
                                annotation: None,
                                type_comment: None,
                            },
                            default: None,
                        },
                    ],
                    kwarg: None,
                },
                body: [
                    Pass(
                        StmtPass {
                            range: 19..23,
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_params: [],
                type_comment: None,
            },
        ),
    ],
)
