crates/ruff_python_parser/src/snapshots/ruff_python_parser__function__tests__function_kw_only_args_with_defaults_and_varargs_and_kwargs.snap
---
source: crates/ruff_python_parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..43,
                is_async: false,
                decorator_list: [],
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                type_params: None,
                parameters: Parameters {
                    range: 5..37,
                    posonlyargs: [],
                    args: [],
                    vararg: Some(
                        Parameter {
                            range: 6..11,
                            name: Identifier {
                                id: "args",
                                range: 7..11,
                            },
                            annotation: None,
                        },
                    ),
                    kwonlyargs: [
                        ParameterWithDefault {
                            range: 13..14,
                            parameter: Parameter {
                                range: 13..14,
                                name: Identifier {
                                    id: "a",
                                    range: 13..14,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 16..20,
                            parameter: Parameter {
                                range: 16..17,
                                name: Identifier {
                                    id: "b",
                                    range: 16..17,
                                },
                                annotation: None,
                            },
                            default: Some(
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 18..20,
                                        value: Int(
                                            20,
                                        ),
                                    },
                                ),
                            ),
                        },
                        ParameterWithDefault {
                            range: 22..26,
                            parameter: Parameter {
                                range: 22..23,
                                name: Identifier {
                                    id: "c",
                                    range: 22..23,
                                },
                                annotation: None,
                            },
                            default: Some(
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 24..26,
                                        value: Int(
                                            30,
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                    kwarg: Some(
                        Parameter {
                            range: 28..36,
                            name: Identifier {
                                id: "kwargs",
                                range: 30..36,
                            },
                            annotation: None,
                        },
                    ),
                },
                returns: None,
                body: [
                    Pass(
                        StmtPass {
                            range: 39..43,
                        },
                    ),
                ],
            },
        ),
    ],
)
