crates/ruff_python_parser/src/snapshots/ruff_python_parser__function__tests__function_no_args.snap
---
source: crates/ruff_python_parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..13,
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                args: Parameters {
                    range: 5..7,
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kwarg: None,
                },
                body: [
                    Pass(
                        StmtPass {
                            range: 9..13,
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_params: [],
            },
        ),
    ],
)
