crates/ruff_python_parser/src/snapshots/ruff_python_parser__function__tests__function_pos_and_kw_only_args_with_defaults_and_kwargs.snap
---
source: crates/ruff_python_parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..51,
                is_async: false,
                decorator_list: [],
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                type_params: None,
                parameters: Parameters {
                    range: 5..45,
                    posonlyargs: [
                        ParameterWithDefault {
                            range: 6..7,
                            parameter: Parameter {
                                range: 6..7,
                                name: Identifier {
                                    id: "a",
                                    range: 6..7,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 9..10,
                            parameter: Parameter {
                                range: 9..10,
                                name: Identifier {
                                    id: "b",
                                    range: 9..10,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                    ],
                    args: [
                        ParameterWithDefault {
                            range: 15..16,
                            parameter: Parameter {
                                range: 15..16,
                                name: Identifier {
                                    id: "c",
                                    range: 15..16,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [
                        ParameterWithDefault {
                            range: 21..22,
                            parameter: Parameter {
                                range: 21..22,
                                name: Identifier {
                                    id: "d",
                                    range: 21..22,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 24..28,
                            parameter: Parameter {
                                range: 24..25,
                                name: Identifier {
                                    id: "e",
                                    range: 24..25,
                                },
                                annotation: None,
                            },
                            default: Some(
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 26..28,
                                        value: Int(
                                            20,
                                        ),
                                    },
                                ),
                            ),
                        },
                        ParameterWithDefault {
                            range: 30..34,
                            parameter: Parameter {
                                range: 30..31,
                                name: Identifier {
                                    id: "f",
                                    range: 30..31,
                                },
                                annotation: None,
                            },
                            default: Some(
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 32..34,
                                        value: Int(
                                            30,
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                    kwarg: Some(
                        Parameter {
                            range: 36..44,
                            name: Identifier {
                                id: "kwargs",
                                range: 38..44,
                            },
                            annotation: None,
                        },
                    ),
                },
                returns: None,
                body: [
                    Pass(
                        StmtPass {
                            range: 47..51,
                        },
                    ),
                ],
            },
        ),
    ],
)
