crates/ruff_python_parser/src/snapshots/ruff_python_parser__function__tests__function_pos_and_kw_only_args_with_defaults_and_varargs.snap
---
source: crates/ruff_python_parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..42,
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                parameters: Parameters {
                    range: 5..36,
                    posonlyargs: [],
                    args: [
                        ParameterWithDefault {
                            range: 6..7,
                            def: Parameter {
                                range: 6..7,
                                arg: Identifier {
                                    id: "a",
                                    range: 6..7,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 9..10,
                            def: Parameter {
                                range: 9..10,
                                arg: Identifier {
                                    id: "b",
                                    range: 9..10,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 12..13,
                            def: Parameter {
                                range: 12..13,
                                arg: Identifier {
                                    id: "c",
                                    range: 12..13,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                    ],
                    vararg: Some(
                        Parameter {
                            range: 16..20,
                            arg: Identifier {
                                id: "args",
                                range: 16..20,
                            },
                            annotation: None,
                        },
                    ),
                    kwonlyargs: [
                        ParameterWithDefault {
                            range: 22..23,
                            def: Parameter {
                                range: 22..23,
                                arg: Identifier {
                                    id: "d",
                                    range: 22..23,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 25..29,
                            def: Parameter {
                                range: 25..26,
                                arg: Identifier {
                                    id: "e",
                                    range: 25..26,
                                },
                                annotation: None,
                            },
                            default: Some(
                                Constant(
                                    ExprConstant {
                                        range: 27..29,
                                        value: Int(
                                            20,
                                        ),
                                        kind: None,
                                    },
                                ),
                            ),
                        },
                        ParameterWithDefault {
                            range: 31..35,
                            def: Parameter {
                                range: 31..32,
                                arg: Identifier {
                                    id: "f",
                                    range: 31..32,
                                },
                                annotation: None,
                            },
                            default: Some(
                                Constant(
                                    ExprConstant {
                                        range: 33..35,
                                        value: Int(
                                            30,
                                        ),
                                        kind: None,
                                    },
                                ),
                            ),
                        },
                    ],
                    kwarg: None,
                },
                body: [
                    Pass(
                        StmtPass {
                            range: 38..42,
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_params: [],
            },
        ),
    ],
)
